# daily_briefing

./: .env.example  .gitignore  README.md  cdk.json  pyproject.toml  pytest.ini
infrastructure/: app.py  stack.py
lambda/: briefing_generator.py  handler.py  prompt.md
tests/: test_briefing_generator.py  test_handler.py
